[gd_scene load_steps=6 format=3 uid="uid://dipkgyxeksy52"]

[ext_resource type="Script" uid="uid://caa3fw1c8ve2h" path="res://scripts/audio.gd" id="1_68h54"]
[ext_resource type="Script" uid="uid://bh31vsgjjxmov" path="res://scripts/pause_menu.gd" id="1_c8mr8"]
[ext_resource type="Theme" uid="uid://758a86rjoymm" path="res://assets/theme.tres" id="2_kukqi"]
[ext_resource type="FontFile" uid="uid://dkxfstws7ia8r" path="res://assets/Xav_button_font-Regular.ttf" id="3_5d2l8"]

[sub_resource type="Theme" id="Theme_eguqy"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c8mr8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -96.0
offset_right = 127.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2

[node name="pause" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
theme = SubResource("Theme_eguqy")
theme_override_constants/separation = 110

[node name="options" type="Button" parent="MarginContainer/pause"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_kukqi")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="retry_current_level" type="Button" parent="MarginContainer/pause"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_kukqi")
theme_override_font_sizes/font_size = 30
text = "Retry Level"

[node name="main_menu" type="Button" parent="MarginContainer/pause"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_kukqi")
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="option_menu" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 110

[node name="audio" type="Button" parent="MarginContainer/option_menu"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_kukqi")
theme_override_font_sizes/font_size = 30
text = "Audio"

[node name="controls" type="Button" parent="MarginContainer/option_menu"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_kukqi")
theme_override_font_sizes/font_size = 30
text = "Controls"

[node name="back_to_pause_menu" type="Button" parent="MarginContainer/option_menu"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_kukqi")
theme_override_font_sizes/font_size = 30
text = "Back to Pause"

[node name="audio_menu" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/audio_menu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.603922, 0.556863, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_5d2l8")
theme_override_font_sizes/font_size = 26
text = "Master "

[node name="Master" type="HSlider" parent="MarginContainer/audio_menu"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("1_68h54")
bus_name = "Master"

[node name="Label2" type="Label" parent="MarginContainer/audio_menu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.603922, 0.556863, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_5d2l8")
theme_override_font_sizes/font_size = 26
text = "SFX"

[node name="SFX" type="HSlider" parent="MarginContainer/audio_menu"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("1_68h54")
bus_name = "SFX"

[node name="Label3" type="Label" parent="MarginContainer/audio_menu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.603922, 0.556863, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_5d2l8")
theme_override_font_sizes/font_size = 26
text = "Music"

[node name="Music" type="HSlider" parent="MarginContainer/audio_menu"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("1_68h54")
bus_name = "Ambience"

[node name="back_to_options" type="Button" parent="MarginContainer/audio_menu"]
layout_mode = 2
theme = ExtResource("2_kukqi")
theme_override_font_sizes/font_size = 16
text = "Back to Options"

[node name="control_menu" type="Control" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/control_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -186.0
offset_right = 249.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 75

[node name="control_keys" type="Label" parent="MarginContainer/control_menu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.603922, 0.556863, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_5d2l8")
text = "Left:    A / Left Arrow key
Right:    D / Right Arrow key
Jump:    W / Up Arrow key
Pause:    Esc"
horizontal_alignment = 1

[node name="back_to_options" type="Button" parent="MarginContainer/control_menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_kukqi")
theme_override_font_sizes/font_size = 16
text = "Back to Options"

[connection signal="pressed" from="MarginContainer/pause/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/pause/retry_current_level" to="." method="_on_retry_current_level_pressed"]
[connection signal="pressed" from="MarginContainer/pause/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/option_menu/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="MarginContainer/option_menu/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/option_menu/back_to_pause_menu" to="." method="_on_back_to_pause_menu_pressed"]
[connection signal="pressed" from="MarginContainer/audio_menu/back_to_options" to="." method="_on_back_to_options_pressed"]
[connection signal="pressed" from="MarginContainer/control_menu/VBoxContainer/back_to_options" to="." method="_on_back_to_options_pressed"]
